# halite

./: .gitignore  Cargo.toml  README.md
halite-iii/: Cargo.toml
ii/: .gitignore  submit.sh
ii/game/: replay-20180116-221020-0500--805969890-384-256-1516158620.hlt  replay-20180116-221120-0500--865227142-312-208-1516158680.hlt  replay-20180116-221208-0500--913764126-312-208-1516158728.hlt  replay-20180116-221525-0500--1110659100-264-176-1516158925.hlt  replay-20180116-221614-0500--1159862773-360-240-1516158974.hlt  replay-20180116-221752-0500--1257659568-336-224-1516159072.hlt  replay-20180116-222214-0500--1519886820-384-256-1516159334.hlt  replay-20180116-222322-0500--1587778382-288-192-1516159402.hlt  replay-20180116-222330-0500--1595873707-336-224-1516159410.hlt  replay-20180116-222450-0500--1675203876-336-224-1516159490.hlt  replay-20180116-222629-0500--1774460739-336-224-1516159589.hlt  replay-20180116-222635-0500--1780538133-288-192-1516159595.hlt  replay-20180116-222716-0500--1821962209-288-192-1516159636.hlt  replay-20180116-223148-0500--2093864195-240-160-1516159908.hlt  replay-20180116-223312-0500--2177392030-264-176-1516159992.hlt  replay-20180116-223445-0500--2269550817-288-192-1516160084.hlt  replay-20180116-223701-0500--2406725998-312-208-1516160221.hlt  (+198 more)
iii/: .gitignore  Cargo.toml  run_game.sh  upload.sh
iii/src/: command.rs  constants.rs  data.rs  grid.rs  lib.rs  main.rs  parse.rs  strategy.rs
src/: collision.rs  command.rs  commander.rs  constants.rs  entity.rs  game.rs  interface.rs  lib.rs  main.rs  navigate.rs  parse.rs  state.rs  strategy.rs
(+41 files in other folders)
