[package]
name = "my_bot"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]

[profile.dev]
opt-level = 3
debug = true
overflow-checks = false

[dependencies]
log = "0.4"
simplelog = "0.5.0"
indexmap = "1.0.2"
failure = "0.1.2"
fixedbitset = "0.1.9"
fnv = "1.0.6"
hungarian = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
